# telethon-fancifier

./: .env.example  .gitignore  README.md  pyproject.toml  start.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  first-dry-run.md  new-features.md
plugins/: README.md  example_reverse.py
scripts/: build_windows_portable.py  windows_build_exe.bat  windows_quick_update.bat  windows_quick_update.ps1  windows_setup.bat
src/telethon_fancifier/: __init__.py  cli.py
src/telethon_fancifier/config/: paths.py  schema.py  store.py  watcher.py
src/telethon_fancifier/core/: build_tools.py  daemon.py  errors.py  llm_tools.py  logging_setup.py  safeguards.py  telegram_credentials.py  telegram_markdown.py  windows_startup.py
src/telethon_fancifier/plugins/: __init__.py  base.py  every_second_upper.py  llm_rewrite.py  loader.py  random_bold.py  registry.py
src/telethon_fancifier/providers/: base.py  deepseek.py
src/telethon_fancifier/ui/: settings_cli.py
tests/: test_config_store_llm_persistence.py  test_llm_config.py  test_llm_preview.py  test_llm_setup_wizard.py  test_plugins.py  test_remove_chats.py  test_safeguards.py  test_settings_merge.py  test_windows_startup.py
